app/components/views/GetStartedPage/GetStarted.module.css
/* ... */
.loaderBarEstimation {
  text-align: left;
  font-size: 9px;
}

.linearProgress.small {
  float: left;
}

.goBackScreenButtonArea {
  position: fixed;
  right: 55px;
  top: 190px;
}

.goBackScreenButton {
  height: 12px;
  width: 12px;
  background-repeat: no-repeat;
  background-size: 12px;
  background-image: var(--x-grey);
  opacity: 1;
  cursor: pointer;
}

.goBackScreenButton:hover {
  opacity: 0.7;
}

.loaderBarEstimation .normal {
  opacity: 0.5465;
}

.loaderBarEstimation .bold {
  opacity: 1;
}

.loaderBarIcon {
  position: absolute;
  right: 37px;
  top: 286px;
}

.loaderBarIcon .loaderBarIconText {
  float: left;
  margin-top: 14px;
  margin-right: 20px;
}

.loaderBarIcon .newLogoAnimation {
  float: right;
  margin: 0;
  height: 50px;
  width: 50px;
  background-size: 50px;
}

.loaderBar {
  float: left;
  width: 100%;
  margin-bottom: 20px;
}

.loaderButtons {
  float: left;
  margin-bottom: 90px;
  width: 100%;
}

.loaderSettingsLogs {
  position: absolute;
  right: 15px;
  top: -25px;
  margin: inherit;
  user-select: none;
}

.getstarted.loader .tutorialButton {
  background-color: var(--info-modal-button-bg);
  color: var(--back-button-dark-text);
}

.getstarted.loader .tutorialButton:hover {
  background-color: var(--title-text-and-button-background-hovered);
}

.getstarted.loader .pageForm .loaderBarButtons {
  position: absolute;
  top: 365px;
  right: 0px;
}

.getstarted.loader .contentTitle {
  font-size: 27px;
  line-height: 34px;
  margin-bottom: 13px;
  float: left;
  width: 100%;
}

.getstarted.loader .contentTitle .loaderBarButtons {
  position: fixed;
  right: 41px;
  top: 425px;
  user-select: none;
}

.getstarted.loader .contentTitle .loaderBarButtons > .button:not(:last-child) {
  margin-right: 10px;
}

.getstarted.loader .contentTitle .loaderBarButtons .invisibleButton {
  font-weight: 400;
}

.loaderBarBottom {
  float: left;
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
}

.loaderBarEstimation {
  float: left;
  font-size: 11px;
  margin-left: 82px;
}

.getstarted.content {
  margin-top: 55px;
  margin-left: 280px;
}

.walletKeyBlueButton:not(.keyBlueButtonDisabled) {
  box-shadow: 0px 5px 13px rgba(0, 0, 0, 0.21);
}

.walletKeyBlueButton:hover {
  box-shadow: none;
}

.walletIcon {
  width: 50px;
  height: 50px;
  margin-left: 43px;
  background-size: 40px 40px;
  background-position: 6px 6px;
}

.walletIcon.createnew {
  background-size: 49px 49px;
  background-position: 0px 0px;
}

.walletIcon.restore {
  background-size: 49px 49px;
  background-position: 0px 0px;
}

.walletIcon {
  margin-left: 54px;
  height: 62px;
  width: 62px;
  background-repeat: no-repeat;
  background-size: 45px 45px;
  background-position: 8px 10px;
}

.walletIcon.wallet {
  background-image: var(--wallet-gray-icon);
}

.walletIcon.selected {
  background-image: var(--wallet-blue-icon);
}

.walletIcon.createnew {
  margin-top: 25px;
  background-size: 58px 58px;
  background-position: 0px 5px;
  background-image: var(--createnewwallet);
}

.walletIcon.restore {
  margin-top: 25px;
  background-size: 58px 58px;
  background-position: 0px 5px;
  background-image: var(--restore-wallet-icon);
}

.displayWallet {
  width: 136px;
  height: 131px;
  font-size: 12px;
}

.displayWalletComplete {
  min-height: 12px;
}
.displayWalletLastAccess {
  font-size: 9px;
}
.displayWalletLaunch {
  font-size: 11px;
  margin-left: 34px;
}

.displayWallet {
  color: transparent;
  margin: 5px 10px 5px 0px;
  float: left;
  height: 161px;
  width: 168px;
  border-radius: 5px;
  border: 1px solid var(--background-container);
  background: var(--display-wallet-bg);
  font-size: 15px;
}

.displayWallet:hover {
  color: var(--background-back-color);
}

.displayWallet.new {
  background: none;
  background-color: var(--background-back-color);
}

.displayWalletName {
  color: var(--new_wallet-label);
  margin-top: 20px;
}

.displayWalletButtons {
  text-align: center;
  margin-top: 5px;
  margin-right: 10px;
  float: right;
}

.displayWalletButton {
  height: 20px;
  width: 20px;
  border-radius: 3px;
  padding: 0;
  background-repeat: no-repeat;
  background-size: 14px;
  background-position: 50% 50%;
  box-shadow: 0px 3px 8px var(--title-text-and-button-background-drop-shadow);
}

.displayWalletButton:hover {
  box-shadow: 0px 1px 3px var(--title-text-and-button-background-drop-shadow);
}

.displayWalletButton.remove {
  background-color: var(--button-text);
  background-image: var(--launcher-wallet-delete);
}

.displayWalletButton.remove:hover {
  background-image: var(--launcher-wallet-delete-hover);
}

.displayWallet:hover:not(.selected) {
  border: 1px solid var(--disabled-color);
}

.displayWallet.selected {
  background: linear-gradient(
    45deg,
    var(--input-color),
    var(--display-wallet-gradient-selected-right)
  );
  box-shadow: 0px 5px 21px var(--title-text-and-button-background-drop-shadow);
  border: 1px solid var(--input-color);
}

.displayWallet.selected .displayWalletName {
  color: var(--selected_wallet-label);
}

.displayWalletComplete {
  color: var(--title-text-and-button-background);
  margin-top: 5px;
  min-height: 20px;
  text-align: center;
  text-transform: capitalize;
  font-size: 12px;
}

.displayWalletName {
  color: var(--wallet-label);
  text-align: center;
}

.displayWalletLastAccess {
  height: 11px;
  color: var(--button-text);
  text-align: center;
  font-size: 11px;
}

.displayWalletCancelChanges {
  float: left;
  margin-top: 7px;
  margin-left: 39px;
  font-size: 14px;
  text-align: center;
  cursor: pointer;
  transition: all 131ms var(--ease-in-out-quart);
}

.displayWalletLaunch {
  color: var(--white-button-text);
  float: left;
  margin-top: 7px;
  margin-left: 39px;
  margin-right: 3px;
  font-size: 14px;
  text-align: center;
  cursor: pointer;
  transition: color 131ms var(--ease-in-out-quart);
}

.displayWalletCancelChanges:hover,
.displayWalletLaunch:hover {
  border-bottom: 1px solid var(--background-back-color);
}
/* ... */

